--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ albumentations==1.0.3
 catalyst==22.04
 clearml==1.6.2
 dvc[gdrive]==1.11.13
+pathspec==0.9.0  # fix dvc
 jupyter==1.0.0
 matplotlib==3.4.2
 opencv-python==4.5.3.56
@@ -13,3 +14,31 @@ torch==1.9.0
 torchmetrics==0.10.3
 pytorch-lightning==1.8.3.post0
 scikit-multilearn==0.2.0
+
+pytest==7.1.2
+pytest-asyncio==0.19.0
+pytest-cov==3.0.0
+pytest-forked==1.4.0
+pytest-html==3.1.1
+pytest-incremental==0.6.0
+pytest-logger==0.5.1
+pytest-memprof==0.2.0
+pytest-metadata==2.0.2
+pytest-ordering==0.6
+pytest-profiling==1.7.0
+pytest-timeout==2.1.0
+
+flake8==4.0.1
+flake8-bandit==3.0.0
+flake8-broken-line==0.4.0
+flake8-bugbear==22.7.1
+flake8-commas==2.1.0
+flake8-comprehensions==3.10.0
+flake8-debugger==4.1.2
+flake8-docstrings==1.6.0
+flake8-eradicate==1.2.1
+flake8-isort==4.1.1
+flake8-polyfill==1.0.2
+flake8-quotes==3.3.1
+flake8-rst-docstrings==0.2.7
+flake8-string-format==0.3.0
