--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,12 +7,12 @@ stages:
 lint:
     stage: lint
     script:
-      - python3 -m pip install -r requirements.txt
+      - make install
       - make lint
 
-#tests:
-#    stage: tests
-#    script:
-#      - ls
-#      - make install && make download_weights
-#      - make run_tests
+tests:
+    stage: tests
+    script:
+      - ls
+      - make install # && make download_weights
+      - make run_tests
