--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 albumentations==1.0.3
 catalyst==22.04
 clearml==1.6.2
-dvc[gdrive]==1.11.13
+dvc[ssh,gdrive]==2.35.2
 pathspec==0.9.0  # fix dvc
 jupyter==1.0.0
 matplotlib==3.4.2
@@ -16,17 +16,7 @@ pytorch-lightning==1.8.3.post0
 scikit-multilearn==0.2.0
 
 pytest==7.1.2
-pytest-asyncio==0.19.0
 pytest-cov==3.0.0
-pytest-forked==1.4.0
-pytest-html==3.1.1
-pytest-incremental==0.6.0
-pytest-logger==0.5.1
-pytest-memprof==0.2.0
-pytest-metadata==2.0.2
-pytest-ordering==0.6
-pytest-profiling==1.7.0
-pytest-timeout==2.1.0
 
 flake8==4.0.1
 flake8-bandit==3.0.0
