add before_script and after_script

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,3 +16,12 @@ tests:
       - ls
       - make install_c_libs && make install && make download_weights
       - make run_tests
+
+before_script:
+    - chmod 400 $HOST_SSH_KEY_BASE64
+    - mkdir -p ~/.ssh
+    - cp $HOST_SSH_KEY_BASE64 ~/.ssh/id_rsa
+    - chmod 400 ~/.ssh/id_rsa
+
+after_script:
+    - rm -f ~/.ssh/id_rsa
