--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ catalyst==22.04
 clearml==1.6.2
 dvc[ssh,gdrive]==2.35.2
 pathspec==0.9.0  # fix dvc
+pygit2==1.10.1  # fix dvc
 jupyter==1.0.0
 matplotlib==3.4.2
 opencv-python==4.5.3.56
