--- a/setup.cfg
+++ b/setup.cfg
@@ -19,6 +19,7 @@ ignore =
     WPS305, # Found `f` string
     WPS306, # Found class without a base class
     WPS358, # Found a float zero (0.0)
+    Q000, # Double quotes found but single quotes preferred
 
 per-file-ignores =
     src/scheduler.py: WPS318, WPS319, W504
